--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.58"
 clap = { version = "3.2.8", features = ["derive"] }
 serde = { version = "1.0.137", features = ["derive"] }
 serde_yaml = "0.8.24"
