chore: added authors

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "tmup"
 version = "0.1.0"
 edition = "2021"
 
+authors = ["Olivier Leduc <leduc.o@gmail.com>"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
